--- a/ShopRazor/Pages/Index.cshtml
+++ b/ShopRazor/Pages/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Home page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+	  <div class="starter-template text-center">
+		<h1>سامانه مدیریت نگهداری تعمیرات</h1>
+		<p class="lead">مدیریت ماشین آلات و تجهیزات و نگهداری و تعمیرات <br>اسناد و مدارک فنی ماشین آلات</p>
+	  </div>
