--- a/ShopRazor/Pages/Shared/_Layout.cshtml
+++ b/ShopRazor/Pages/Shared/_Layout.cshtml
@@ -4,8 +4,16 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - ShopRazor</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" />
+ @*   <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/css/site.css" />*@
+        <!-- Bootstrap core CSS -->
+	<link href="~/css/bootstrap.css" rel="stylesheet">
+@*	<link href="~/css/pricing.css" rel="stylesheet">
+*@	
+
+    <link href="~/fonts/sahel/sahel.css" rel="stylesheet">
+
+
 </head>
 <body>
     <header>
@@ -19,10 +27,10 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Index">خانه</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">مدیرسیستم</a>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
@@ -30,15 +38,16 @@
             </div>
         </nav>
     </header>
-    <div class="container">
-        <main role="main" class="pb-3">
+
+
+        <main role="main" class="container">
             @RenderBody()
         </main>
-    </div>
 
-    <footer class="border-top footer text-muted">
+
+    <footer class="border-top footer text-muted fixed-bottom">
         <div class="container">
-            &copy; 2022 - ShopRazor - <a asp-area="" asp-page="/Privacy">Privacy</a>
+            &copy; 1400 - نت یار 
         </div>
     </footer>
 
