--- a/ShopRazor/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
+++ b/ShopRazor/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
@@ -1,11 +1,11 @@
 ﻿@page
 @model ForgotPasswordConfirmation
 @{
-    ViewData["Title"] = "Forgot password confirmation";
+    ViewData["Title"] = "تایید رمز عبور را فراموش کرده اید";
 }
 
 <h1>@ViewData["Title"]</h1>
 <p>
-    Please check your email to reset your password.
+    لطفا ایمیل خود را بررسی کنید تا رمز عبور خود را بازنشانی کنید.
 </p>
 
