--- a/ShopRazor/Areas/Identity/Pages/Account/LoginWithRecoveryCode.cshtml
+++ b/ShopRazor/Areas/Identity/Pages/Account/LoginWithRecoveryCode.cshtml
@@ -1,14 +1,14 @@
 ﻿@page
 @model LoginWithRecoveryCodeModel
 @{
-    ViewData["Title"] = "Recovery code verification";
+    ViewData["Title"] = "تایید کد بازیابی";
 }
 
 <h1>@ViewData["Title"]</h1>
 <hr />
 <p>
-    You have requested to log in with a recovery code. This login will not be remembered until you provide
-    an authenticator app code at log in or disable 2FA and log in again.
+    شما درخواست کرده اید که با یک کد بازیابی وارد شوید. این ورود تا زمانی که آن را ارائه نکنید به خاطر سپرده نخواهد شد
+    یک کد برنامه authenticator در هنگام ورود به سیستم یا غیرفعال کردن 2FA و دوباره وارد شوید.
 </p>
 <div class="row">
     <div class="col-md-4">
@@ -19,7 +19,7 @@
                 <input asp-for="Input.RecoveryCode" class="form-control" autocomplete="off" />
                 <span asp-validation-for="Input.RecoveryCode" class="text-danger"></span>
             </div>
-            <button type="submit" class="btn btn-primary">Log in</button>
+            <button type="submit" class="btn btn-primary">ورود سیستم</button>
         </form>
     </div>
 </div>
