--- a/ShopRazor/Areas/Identity/Pages/Account/Manage/ResetAuthenticator.cshtml
+++ b/ShopRazor/Areas/Identity/Pages/Account/Manage/ResetAuthenticator.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model ResetAuthenticatorModel
 @{
-    ViewData["Title"] = "Reset authenticator key";
+    ViewData["Title"] = "کلید احراز هویت را بازنشانی کنید";
     ViewData["ActivePage"] = ManageNavPages.TwoFactorAuthentication;
 }
 
@@ -10,15 +10,15 @@
 <div class="alert alert-warning" role="alert">
     <p>
         <span class="glyphicon glyphicon-warning-sign"></span>
-        <strong>If you reset your authenticator key your authenticator app will not work until you reconfigure it.</strong>
+        <strong>اگر کلید احراز هویت خود را بازنشانی کنید، برنامه احراز هویت شما تا زمانی که دوباره آن را پیکربندی نکنید، کار نخواهد کرد..</strong>
     </p>
     <p>
-        This process disables 2FA until you verify your authenticator app.
-        If you do not complete your authenticator app configuration you may lose access to your account.
+        این فرآیند تا زمانی که برنامه احراز هویت خود را تأیید نکنید، 2FA را غیرفعال می کند.
+        اگر پیکربندی برنامه authenticator خود را کامل نکنید، ممکن است دسترسی به حساب خود را از دست بدهید.
     </p>
 </div>
 <div>
     <form id="reset-authenticator-form" method="post" class="form-group">
-        <button id="reset-authenticator-button" class="btn btn-danger" type="submit">Reset authenticator key</button>
+        <button id="reset-authenticator-button" class="btn btn-danger" type="submit">کلید احراز هویت را بازنشانی کنید</button>
     </form>
 </div>
