--- a/ShopRazor/Areas/Identity/Pages/Account/ExternalLogin.cshtml
+++ b/ShopRazor/Areas/Identity/Pages/Account/ExternalLogin.cshtml
@@ -1,17 +1,17 @@
 ﻿@page
 @model ExternalLoginModel
 @{
-    ViewData["Title"] = "Register";
+    ViewData["Title"] = "ثبت کردن";
 }
 
 <h1>@ViewData["Title"]</h1>
-<h4 id="external-login-title">Associate your @Model.ProviderDisplayName account.</h4>
+<h4 id="external-login-title">خود را مرتبط کنید @Model.ProviderDisplayName حساب کاربری.</h4>
 <hr />
 
 <p id="external-login-description" class="text-info">
-    You've successfully authenticated with <strong>@Model.ProviderDisplayName</strong>.
-    Please enter an email address for this site below and click the Register button to finish
-    logging in.
+    Yشما با موفقیت احراز هویت کرده اید <strong>@Model.ProviderDisplayName</strong>.
+    لطفاً یک آدرس ایمیل برای این سایت در زیر وارد کنید و روی دکمه ثبت کلیک کنید تا کار تمام شود
+    ورود به سیستم در.
 </p>
 
 <div class="row">
@@ -23,7 +23,7 @@
                 <input asp-for="Input.Email" class="form-control" />
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
-            <button type="submit" class="btn btn-primary">Register</button>
+            <button type="submit" class="btn btn-primary">ثبت کردن</button>
         </form>
     </div>
 </div>
