--- a/ShopRazor/Areas/Identity/Pages/Account/Lockout.cshtml
+++ b/ShopRazor/Areas/Identity/Pages/Account/Lockout.cshtml
@@ -1,10 +1,10 @@
 ﻿@page
 @model LockoutModel
 @{
-    ViewData["Title"] = "Locked out";
+    ViewData["Title"] = "قفل شده است";
 }
 
 <header>
     <h1 class="text-danger">@ViewData["Title"]</h1>
-    <p class="text-danger">This account has been locked out, please try again later.</p>
+    <p class="text-danger">این حساب قفل شده است، لطفاً بعداً دوباره امتحان کنید.</p>
 </header>
