--- a/ShopRazor/Areas/Identity/Pages/Account/LoginWith2fa.cshtml
+++ b/ShopRazor/Areas/Identity/Pages/Account/LoginWith2fa.cshtml
@@ -1,12 +1,12 @@
 ﻿@page
 @model LoginWith2faModel
 @{
-    ViewData["Title"] = "Two-factor authentication";
+    ViewData["Title"] = "احراز هویت دو مرحله ای";
 }
 
 <h1>@ViewData["Title"]</h1>
 <hr />
-<p>Your login is protected with an authenticator app. Enter your authenticator code below.</p>
+<p>ورود شما با یک برنامه احراز هویت محافظت می شود. کد احراز هویت خود را در زیر وارد کنید.</p>
 <div class="row">
     <div class="col-md-4">
         <form method="post" asp-route-returnUrl="@Model.ReturnUrl">
@@ -26,14 +26,14 @@
                 </div>
             </div>
             <div class="form-group">
-                <button type="submit" class="btn btn-primary">Log in</button>
+                <button type="submit" class="btn btn-primary">ورود به سیستم</button>
             </div>
         </form>
     </div>
 </div>
 <p>
-    Don't have access to your authenticator device? You can
-    <a id="recovery-code-login" asp-page="./LoginWithRecoveryCode" asp-route-returnUrl="@Model.ReturnUrl">log in with a recovery code</a>.
+    آیا به دستگاه احراز هویت خود دسترسی ندارید؟ شما می توانید
+    <a id="recovery-code-login" asp-page="./LoginWithRecoveryCode" asp-route-returnUrl="@Model.ReturnUrl">با یک کد بازیابی وارد شوید</a>.
 </p>
 
 @section Scripts {
