--- a/ShopRazor/Areas/Identity/Pages/Account/Manage/DownloadPersonalData.cshtml
+++ b/ShopRazor/Areas/Identity/Pages/Account/Manage/DownloadPersonalData.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model DownloadPersonalDataModel
 @{
-    ViewData["Title"] = "Download Your Data";
+    ViewData["Title"] = "داده های خود را دانلود کنید";
     ViewData["ActivePage"] = ManageNavPages.PersonalData;
 }
 
