--- a/ShopRazor/Areas/Identity/Pages/Account/Manage/EnableAuthenticator.cshtml
+++ b/ShopRazor/Areas/Identity/Pages/Account/Manage/EnableAuthenticator.cshtml
@@ -1,35 +1,35 @@
 ﻿@page
 @model EnableAuthenticatorModel
 @{
-    ViewData["Title"] = "Configure authenticator app";
+    ViewData["Title"] = "برنامه احراز هویت را پیکربندی کنید";
     ViewData["ActivePage"] = ManageNavPages.TwoFactorAuthentication;
 }
 
 <partial name="_StatusMessage" for="StatusMessage" />
 <h4>@ViewData["Title"]</h4>
 <div>
-    <p>To use an authenticator app go through the following steps:</p>
+    <p>برای استفاده از یک برنامه احراز هویت، مراحل زیر را طی کنید:</p>
     <ol class="list">
         <li>
             <p>
-                Download a two-factor authenticator app like Microsoft Authenticator for
+                یک برنامه احراز هویت دو مرحله ای مانند Microsoft Authenticator را دانلود کنید
                 <a href="https://go.microsoft.com/fwlink/?Linkid=825072">Android</a> and
                 <a href="https://go.microsoft.com/fwlink/?Linkid=825073">iOS</a> or
-                Google Authenticator for
+                Google Authenticator برای
                 <a href="https://play.google.com/store/apps/details?id=com.google.android.apps.authenticator2&amp;hl=en">Android</a> and
                 <a href="https://itunes.apple.com/us/app/google-authenticator/id388497605?mt=8">iOS</a>.
             </p>
         </li>
         <li>
-            <p>Scan the QR Code or enter this key <kbd>@Model.SharedKey</kbd> into your two factor authenticator app. Spaces and casing do not matter.</p>
-            <div class="alert alert-info">Learn how to <a href="https://go.microsoft.com/fwlink/?Linkid=852423">enable QR code generation</a>.</div>
+            <p>کد QR را اسکن کنید یا این کلید را وارد کنید <kbd>@Model.SharedKey</kbd> به برنامه احراز هویت دو عاملی شما. فضاها و بدنه مهم نیست.</p>
+            <div class="alert alert-info">یاد بگیرید که چگونه <a href="https://go.microsoft.com/fwlink/?Linkid=852423">تولید کد QR را فعال کنید</a>.</div>
             <div id="qrCode"></div>
             <div id="qrCodeData" data-url="@Html.Raw(@Model.AuthenticatorUri)"></div>
         </li>
         <li>
             <p>
-                Once you have scanned the QR code or input the key above, your two factor authentication app will provide you
-                with a unique code. Enter the code in the confirmation box below.
+                هنگامی که کد QR را اسکن کردید یا کلید بالا را وارد کردید، برنامه احراز هویت دو عاملی شما را در اختیار شما قرار می دهد.
+                با کد منحصر به فرد کد را در کادر تایید زیر وارد کنید.
             </p>
             <div class="row">
                 <div class="col-md-6">
@@ -39,7 +39,7 @@
                             <input asp-for="Input.Code" class="form-control" autocomplete="off" />
                             <span asp-validation-for="Input.Code" class="text-danger"></span>
                         </div>
-                        <button type="submit" class="btn btn-primary">Verify</button>
+                        <button type="submit" class="btn btn-primary">تأیید کنید</button>
                         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                     </form>
                 </div>
