--- a/ShopRazor/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
+++ b/ShopRazor/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model PersonalDataModel
 @{
-    ViewData["Title"] = "Personal Data";
+    ViewData["Title"] = "اطلاعات شخصی";
     ViewData["ActivePage"] = ManageNavPages.PersonalData;
 }
 
@@ -9,15 +9,15 @@
 
 <div class="row">
     <div class="col-md-6">
-        <p>Your account contains personal data that you have given us. This page allows you to download or delete that data.</p>
+        <p> حساب شما حاوی اطلاعات شخصی است که به ما داده اید. این صفحه به شما امکان می دهد آن داده ها را دانلود یا حذف کنید.</p>
         <p>
-            <strong>Deleting this data will permanently remove your account, and this cannot be recovered.</strong>
+            <strong>با حذف این داده‌ها حساب شما برای همیشه حذف می‌شود و این اطلاعات قابل بازیابی نیست.</strong>
         </p>
         <form id="download-data" asp-page="DownloadPersonalData" method="post" class="form-group">
-            <button class="btn btn-primary" type="submit">Download</button>
+            <button class="btn btn-primary" type="submit">دانلود</button>
         </form>
         <p>
-            <a id="delete" asp-page="DeletePersonalData" class="btn btn-secondary">Delete</a>
+            <a id="delete" asp-page="DeletePersonalData" class="btn btn-secondary">حذف</a>
         </p>
     </div>
 </div>
