--- a/ShopRazor/Areas/Identity/Pages/Account/Manage/SetPassword.cshtml
+++ b/ShopRazor/Areas/Identity/Pages/Account/Manage/SetPassword.cshtml
@@ -1,15 +1,15 @@
 ﻿@page
 @model SetPasswordModel
 @{
-    ViewData["Title"] = "Set password";
+    ViewData["Title"] = "رمز عبور را تنظیم کنید";
     ViewData["ActivePage"] = ManageNavPages.ChangePassword;
 }
 
-<h4>Set your password</h4>
+<h4>کلمه ی عبور خود را تنظیم کنید</h4>
 <partial name="_StatusMessage" for="StatusMessage" />
 <p class="text-info">
-    You do not have a local username/password for this site. Add a local
-    account so you can log in without an external login.
+    شما نام کاربری/رمز عبور محلی برای این سایت ندارید. محلی اضافه کنید
+    حساب کاربری تا بتوانید بدون ورود خارجی وارد شوید.
 </p>
 <div class="row">
     <div class="col-md-6">
@@ -25,7 +25,7 @@
                 <input asp-for="Input.ConfirmPassword" class="form-control" />
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
-            <button type="submit" class="btn btn-primary">Set password</button>
+            <button type="submit" class="btn btn-primary">رمز عبور را تنظیم کنید</button>
         </form>
     </div>
 </div>
