--- a/ShopRazor/Areas/Identity/Pages/Account/Manage/ShowRecoveryCodes.cshtml
+++ b/ShopRazor/Areas/Identity/Pages/Account/Manage/ShowRecoveryCodes.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model ShowRecoveryCodesModel
 @{
-    ViewData["Title"] = "Recovery codes";
+    ViewData["Title"] = "کدهای بازیابی";
     ViewData["ActivePage"] = "TwoFactorAuthentication";
 }
 
@@ -9,10 +9,10 @@
 <h4>@ViewData["Title"]</h4>
 <div class="alert alert-warning" role="alert">
     <p>
-        <strong>Put these codes in a safe place.</strong>
+        <strong>این کدها را در مکانی امن قرار دهید.</strong>
     </p>
     <p>
-        If you lose your device and don't have the recovery codes you will lose access to your account.
+        اگر دستگاه خود را گم کنید و کدهای بازیابی را نداشته باشید، دسترسی به حساب خود را از دست خواهید داد.
     </p>
 </div>
 <div class="row">
