--- a/ShopRazor/Areas/Identity/Pages/Account/Manage/TwoFactorAuthentication.cshtml
+++ b/ShopRazor/Areas/Identity/Pages/Account/Manage/TwoFactorAuthentication.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model TwoFactorAuthenticationModel
 @{
-    ViewData["Title"] = "Two-factor authentication (2FA)";
+    ViewData["Title"] = "احراز هویت دو مرحله ای (2FA)";
     ViewData["ActivePage"] = ManageNavPages.TwoFactorAuthentication;
 }
 
@@ -12,44 +12,44 @@
     if (Model.RecoveryCodesLeft == 0)
     {
         <div class="alert alert-danger">
-            <strong>You have no recovery codes left.</strong>
-            <p>You must <a asp-page="./GenerateRecoveryCodes">generate a new set of recovery codes</a> before you can log in with a recovery code.</p>
+            <strong>هیچ کد بازیابی ندارید.</strong>
+            <p>شما باید <a asp-page="./GenerateRecoveryCodes">مجموعه جدیدی از کدهای بازیابی را ایجاد کنید</a> قبل از اینکه بتوانید با یک کد بازیابی وارد شوید.</p>
         </div>
     }
     else if (Model.RecoveryCodesLeft == 1)
     {
         <div class="alert alert-danger">
-            <strong>You have 1 recovery code left.</strong>
-            <p>You can <a asp-page="./GenerateRecoveryCodes">generate a new set of recovery codes</a>.</p>
+            <strong>شما 1 کد بازیابی باقی مانده است.</strong>
+            <p>شما می توانید <a asp-page="./GenerateRecoveryCodes">مجموعه جدیدی از کدهای بازیابی را ایجاد کنید</a>.</p>
         </div>
     }
     else if (Model.RecoveryCodesLeft <= 3)
     {
         <div class="alert alert-warning">
-            <strong>You have @Model.RecoveryCodesLeft recovery codes left.</strong>
-            <p>You should <a asp-page="./GenerateRecoveryCodes">generate a new set of recovery codes</a>.</p>
+            <strong>شما دارید @Model.RecoveryCodesLeft کدهای بازیابی باقی مانده است.</strong>
+            <p>شما باید <a asp-page="./GenerateRecoveryCodes"> مجموعه جدیدی از کدهای بازیابی را ایجاد کنید</a>.</p>
         </div>
     }
 
     if (Model.IsMachineRemembered)
     {
         <form method="post" style="display: inline-block">
-            <button type="submit" class="btn btn-default">Forget this browser</button>
+            <button type="submit" class="btn btn-default">این مرورگر را فراموش کنید</button>
         </form>
     }
-    <a asp-page="./Disable2fa" class="btn btn-default">Disable 2FA</a>
-    <a asp-page="./GenerateRecoveryCodes" class="btn btn-default">Reset recovery codes</a>
+    <a asp-page="./Disable2fa" class="btn btn-default">2FA را غیرفعال کنید</a>
+    <a asp-page="./GenerateRecoveryCodes" class="btn btn-default">کدهای بازیابی را بازنشانی کنید</a>
 }
 
-<h5>Authenticator app</h5>
+<h5>برنامه Authenticator</h5>
 @if (!Model.HasAuthenticator)
 {
-    <a id="enable-authenticator" asp-page="./EnableAuthenticator" class="btn btn-default">Add authenticator app</a>
+    <a id="enable-authenticator" asp-page="./EnableAuthenticator" class="btn btn-default">برنامه احراز هویت را اضافه کنید</a>
 }
 else
 {
-    <a id="enable-authenticator" asp-page="./EnableAuthenticator" class="btn btn-default">Setup authenticator app</a>
-    <a id="reset-authenticator" asp-page="./ResetAuthenticator" class="btn btn-default">Reset authenticator app</a>
+    <a id="enable-authenticator" asp-page="./EnableAuthenticator" class="btn btn-default">برنامه احراز هویت را راه اندازی کنید</a>
+    <a id="reset-authenticator" asp-page="./ResetAuthenticator" class="btn btn-default">برنامه authenticator را بازنشانی کنید</a>
 }
 
 @section Scripts {
