--- a/ShopRazor/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
+++ b/ShopRazor/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
@@ -5,14 +5,14 @@
     }
     else
     {
-        Layout = "/Areas/Identity/Pages/_Layout.cshtml";
+        Layout = "/Areas/Identity/Pages/Account/Manage/_Layout.cshtml";
     }
 }
 
-<h2>Manage your account</h2>
+<h2>حساب کاربری خود را مدیریت کنید</h2>
 
 <div>
-    <h4>Change your account settings</h4>
+    <h4>تنظیمات حساب خود را تغییر دهید</h4>
     <hr />
     <div class="row">
         <div class="col-md-3">
