--- a/ShopRazor/Areas/Identity/Pages/Account/RegisterConfirmation.cshtml
+++ b/ShopRazor/Areas/Identity/Pages/Account/RegisterConfirmation.cshtml
@@ -1,22 +1,22 @@
 ﻿@page
 @model RegisterConfirmationModel
 @{
-    ViewData["Title"] = "Register confirmation";
+    ViewData["Title"] = "تایید ثبت نام";
 }
 
 <h1>@ViewData["Title"]</h1>
 @{
     if (@Model.DisplayConfirmAccountLink)
     {
-<p>
-    This app does not currently have a real email sender registered, see <a href="https://aka.ms/aspaccountconf">these docs</a> for how to configure a real email sender.
-    Normally this would be emailed: <a id="confirm-link" href="@Model.EmailConfirmationUrl">Click here to confirm your account</a>
-</p>
+        <p>
+            این برنامه در حال حاضر یک فرستنده ایمیل واقعی ثبت نشده است، ببینید <a href="https://aka.ms/aspaccountconf">این اسناد</a> برای نحوه پیکربندی یک فرستنده ایمیل واقعی.
+            به طور معمول این ایمیل ارسال می شود: <a id="confirm-link" href="@Model.EmailConfirmationUrl">برای تایید حساب خود اینجا را کلیک کنید</a>
+        </p>
     }
     else
     {
-<p>
-        Please check your email to confirm your account.
-</p>
+        <p>
+            لطفا ایمیل خود را برای تایید حساب خود بررسی کنید.
+        </p>
     }
 }
