--- a/ShopRazor/Areas/Identity/Pages/Account/ResetPasswordConfirmation.cshtml
+++ b/ShopRazor/Areas/Identity/Pages/Account/ResetPasswordConfirmation.cshtml
@@ -1,10 +1,10 @@
 ﻿@page
 @model ResetPasswordConfirmationModel
 @{
-    ViewData["Title"] = "Reset password confirmation";
+    ViewData["Title"] = "بازنشانی تایید رمز عبور";
 }
 
 <h1>@ViewData["Title"]</h1>
 <p>
-    Your password has been reset. Please <a asp-page="./Login">click here to log in</a>.
+    رمز عبور شما بازنشانی شده است. لطفا <a asp-page="./Login">برای ورود اینجا کلیک کنید</a>.
 </p>
