--- a/ShopRazor/Pages/Shared/_Layout.cshtml
+++ b/ShopRazor/Pages/Shared/_Layout.cshtml
@@ -4,12 +4,12 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - ShopRazor</title>
- @*   <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" />*@
-        <!-- Bootstrap core CSS -->
-	<link href="~/css/bootstrap.css" rel="stylesheet">
-@*	<link href="~/css/pricing.css" rel="stylesheet">
-*@	
+    @*   <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+        <link rel="stylesheet" href="~/css/site.css" />*@
+    <!-- Bootstrap core CSS -->
+    <link href="~/css/bootstrap.css" rel="stylesheet">
+    @*	<link href="~/css/pricing.css" rel="stylesheet">
+    *@
 
     <link href="~/fonts/sahel/sahel.css" rel="stylesheet">
 
@@ -32,6 +32,16 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">مدیرسیستم</a>
                         </li>
+
+                        <li class="nav-item dropdown">
+                            <a class="nav-link " href="#" id="dropdown01"
+                               data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">اطلاعات پایه</a>
+                            <div class="dropdown-menu" aria-labelledby="dropdown01">
+                                <a class="dropdown-item" asp-page="/Companies/Index">شرکت ها</a>
+                                <a class="dropdown-item" asp-page="/Departments/Index">دپارتمان</a>
+                                <a class="dropdown-item" href="#">گزینه 3</a>
+                            </div>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
@@ -40,14 +50,14 @@
     </header>
 
 
-        <main role="main" class="container">
-            @RenderBody()
-        </main>
+    <main role="main" class="container">
+        @RenderBody()
+    </main>
 
 
     <footer class="border-top footer text-muted fixed-bottom">
         <div class="container">
-            &copy; 1400 - نت یار 
+            &copy; 1400 - نت یار
         </div>
     </footer>
 
