--- a/ShopRazor/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/ShopRazor/Areas/Identity/Pages/_ViewImports.cshtml
@@ -1,4 +1,4 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@using ShopRazor.Areas.Identity
-@using ShopRazor.Areas.Identity.Pages
+@using Netyar.Areas.Identity
+@using Netyar.Areas.Identity.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
