--- a/ShopRazor/Pages/Companies/Details.cshtml
+++ b/ShopRazor/Pages/Companies/Details.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model ShopRazor.Pages.Companies.DetailsModel
+@model Netyar.Pages.Companies.DetailsModel
 
 @{
     ViewData["Title"] = "Details";
