--- a/ShopRazor/Pages/Companies/Index.cshtml
+++ b/ShopRazor/Pages/Companies/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model ShopRazor.Pages.Companies.IndexModel
+@model Netyar.Pages.Companies.IndexModel
 
 @{
     ViewData["Title"] = "Index";
@@ -14,59 +14,37 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model._company[0].CompanyTitle)
+                @Html.DisplayNameFor(model => model.CompanyList[0].CompanyID)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model._company[0].Description)
+                @Html.DisplayNameFor(model => model.CompanyList[0].CompanyTitle)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model._company[0].IsActive)
+                @Html.DisplayNameFor(model => model.CompanyList[0].CountDepartment)
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model._company[0].IsDelete)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model._company[0].CreateDatetime)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model._company[0].ModifidDatetime)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model._company[0].DeleteDatetime)
-            </th>
+
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model._company) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.CompanyTitle)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Description)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.IsActive)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.IsDelete)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CreateDatetime)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ModifidDatetime)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.DeleteDatetime)
-            </td>
-            <td>
-                <a asp-page="./Edit" asp-route-id="@item.CompanyID">Edit</a> |
-                <a asp-page="./Details" asp-route-id="@item.CompanyID">Details</a> |
-                <a asp-page="./Delete" asp-route-id="@item.CompanyID">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model.CompanyList)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.CompanyID)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.CompanyTitle)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.CountDepartment)
+                </td>
+                <td>
+                    <a asp-page="./Edit" asp-route-id="@item.CompanyID">ویرایش</a> |
+                    <a asp-page="./Details" asp-route-id="@item.CompanyID">Details</a> |
+
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
