--- a/ShopRazor/Pages/Departments/Details.cshtml
+++ b/ShopRazor/Pages/Departments/Details.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model ShopRazor.Pages.Departments.DetailsModel
+@model Netyar.Pages.Departments.DetailsModel
 
 @{
     ViewData["Title"] = "Details";
