--- a/ShopRazor/Pages/Departments/Edit.cshtml
+++ b/ShopRazor/Pages/Departments/Edit.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model ShopRazor.Pages.Departments.EditModel
+@model Netyar.Pages.Departments.EditModel
 
 @{
     ViewData["Title"] = "Edit";
