--- a/ShopRazor/Pages/Companies/Create.cshtml
+++ b/ShopRazor/Pages/Companies/Create.cshtml
@@ -1,13 +1,13 @@
 ﻿@page
-@model ShopRazor.Pages.Companies.CreateModel
+@model Netyar.Pages.Companies.CreateModel
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "شرکت جدید";
 }
 
-<h1>Create</h1>
+<h1>شرکت جدید</h1>
 
-<h4>Company</h4>
+<h4>افزودن</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -23,41 +23,16 @@
                 <input asp-for="_company.Description" class="form-control" />
                 <span asp-validation-for="_company.Description" class="text-danger"></span>
             </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="_company.IsActive" /> @Html.DisplayNameFor(model => model._company.IsActive)
-                </label>
-            </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="_company.IsDelete" /> @Html.DisplayNameFor(model => model._company.IsDelete)
-                </label>
-            </div>
+
             <div class="form-group">
-                <label asp-for="_company.CreateDatetime" class="control-label"></label>
-                <input asp-for="_company.CreateDatetime" class="form-control" />
-                <span asp-validation-for="_company.CreateDatetime" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="_company.ModifidDatetime" class="control-label"></label>
-                <input asp-for="_company.ModifidDatetime" class="form-control" />
-                <span asp-validation-for="_company.ModifidDatetime" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="_company.DeleteDatetime" class="control-label"></label>
-                <input asp-for="_company.DeleteDatetime" class="form-control" />
-                <span asp-validation-for="_company.DeleteDatetime" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="ذخیره" class="btn btn-primary" />
+                <a asp-page="Index" class="btn btn-secondary">انصراف</a>
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-page="Index">Back to List</a>
-</div>
+
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
