--- a/ShopRazor/Pages/Companies/Edit.cshtml
+++ b/ShopRazor/Pages/Companies/Edit.cshtml
@@ -1,13 +1,11 @@
 ﻿@page
-@model ShopRazor.Pages.Companies.EditModel
+@model Netyar.Pages.Companies.EditModel
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "ویرایش";
 }
 
-<h1>Edit</h1>
-
-<h4>Company</h4>
+<h1>ویرایش</h1>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -24,41 +22,18 @@
                 <input asp-for="_company.Description" class="form-control" />
                 <span asp-validation-for="_company.Description" class="text-danger"></span>
             </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="_company.IsActive" /> @Html.DisplayNameFor(model => model._company.IsActive)
-                </label>
-            </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="_company.IsDelete" /> @Html.DisplayNameFor(model => model._company.IsDelete)
-                </label>
-            </div>
+
+
             <div class="form-group">
-                <label asp-for="_company.CreateDatetime" class="control-label"></label>
-                <input asp-for="_company.CreateDatetime" class="form-control" />
-                <span asp-validation-for="_company.CreateDatetime" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="_company.ModifidDatetime" class="control-label"></label>
-                <input asp-for="_company.ModifidDatetime" class="form-control" />
-                <span asp-validation-for="_company.ModifidDatetime" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="_company.DeleteDatetime" class="control-label"></label>
-                <input asp-for="_company.DeleteDatetime" class="form-control" />
-                <span asp-validation-for="_company.DeleteDatetime" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="ذخیره" class="btn btn-primary" /> |
+                <a asp-page="./Delete" class="btn btn-danger" asp-route-id="@Model._company.CompanyID">حذف</a> |
+                <a asp-page="./Index" class="btn btn-secondary">انصراف</a>
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-page="./Index">Back to List</a>
-</div>
+
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
