--- a/ShopRazor/Pages/Departments/Create.cshtml
+++ b/ShopRazor/Pages/Departments/Create.cshtml
@@ -1,8 +1,8 @@
 ﻿@page
-@model ShopRazor.Pages.Departments.CreateModel
+@model Netyar.Pages.Departments.CreateModel
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "دپارتمان جدید";
 }
 
 <h1>Create</h1>
@@ -50,7 +50,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Department.CompanyID_FK" class="control-label"></label>
-                <select asp-for="Department.CompanyID_FK" class ="form-control" asp-items="ViewBag.CompanyID_FK"></select>
+                <select asp-for="Department.CompanyID_FK" class="form-control" asp-items="ViewBag.CompanyID_FK"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
