--- a/ShopRazor/Pages/_ViewImports.cshtml
+++ b/ShopRazor/Pages/_ViewImports.cshtml
@@ -1,5 +1,5 @@
 @using Microsoft.AspNetCore.Identity
-@using ShopRazor
+@using Netyar
 
-@namespace ShopRazor.Pages
+@namespace Netyar.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
